# CS166-ecc-py

./: .gitignore  README.md  completeSystemInteractive.py  demo1.py  demo2.py  domain.txt  domain1.txt  domain2.txt  main.py  out.txt  output.txt  pub1.txt  public_key.txt  shared1.txt  test.py  testoutput.txt
KKstuff/: domain.txt  eccMath.py  ecc_func.py  main.py  output.txt  private_key.txt  public_keys.txt
big_key_demo/: cleanup.sh  demo.sh
ecc-crypto/: README.md  pyproject.toml  requirements.txt  setup.py
ecc-crypto/src/: eccMath.py  genPrime.py  project_flowchart.md
ecc-crypto/tests/: test.py
in_class_demo/: cleanup.sh  demo.sh
in_class_demo/alice/: public  shared
utility/: eccFunc.py  eccFunc_test.py  eccMath.py  eccMath_test.py  ecc_func.py  findGenerator.py  genPrime.py  graphing.py  interactiveGraph.py
