[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ecc-crypto"
version = "0.1.0"
description = "A Python package for Elliptic Curve Cryptography key exchange."
authors = [{ name = "Your Name", email = "your.email@example.com" }]
license = { file = "LICENSE" }
readme = "README.md"
homepage = "https://github.com/yourusername/ecc-crypto"
repository = "https://github.com/yourusername/ecc-crypto"
keywords = ["cryptography", "elliptic curve", "key exchange", "ECDH"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
where = ["src"]